force-app/main/default/objects/Meeting_Record__c/Meeting_Record__c.object-meta.xml
<CustomObject>
    <label>面談記録</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>面談記録番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>面談記録</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>