force-app/main/default/objects/Meeting_Record__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>面談記録</relationshipLabel>
    <relationshipName>Meeting_Records</relationshipName>
    <type>Lookup</type>
</CustomField>