force-app/main/default/objects/Meeting_Record__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <label>面談日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>