force-app/main/default/objects/Meeting_Record__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>面談種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>顧客訪問</fullName><default>true</default><label>顧客訪問</label></value>
            <value><fullName>Web会議</fullName><default>false</default><label>Web会議</label></value>
            <value><fullName>電話</fullName><default>false</default><label>電話</label></value>
            <value><fullName>展示会</fullName><default>false</default><label>展示会</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>