force-app/main/default/objects/Meeting_Record__c/fields/Needs_Extracted__c.field-meta.xml
<CustomField>
    <fullName>Needs_Extracted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ニーズ抽出済み</label>
    <type>Checkbox</type>
</CustomField>