force-app/main/default/objects/Meeting_Record__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>面談記録</relationshipLabel>
    <relationshipName>Meeting_Records</relationshipName>
    <type>Lookup</type>
</CustomField>