force-app/main/default/objects/Meeting_Record__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <label>参加者</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>