force-app/main/default/objects/Meeting_Record__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>面談サマリー</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>