force-app/main/default/objects/Meeting_Record__c/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <label>文字起こし</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>